tests/ui/static/gc/fsa/stdlib_errors.stderr
error: The drop method for `Rc<u8>` cannot be safely finalized.
  --> $DIR/stdlib_errors.rs:31:13
   |
LL |     Gc::new(s);
   |     --------^-
   |     |       |
   |     |       this `Rc<u8>` is not safe to be run as a finalizer
   |     caused by trying to construct a `Gc<S>` here.

error: The drop method for `T` cannot be safely finalized.
  --> $DIR/stdlib_errors.rs:34:13
   |
LL |         let x = self.1.0; // should fail
   |                 --------
   |                 |
   |                 a finalizer cannot safely use this `Unsafe`
   |                 from a drop method because it does not implement `FinalizerSafe`.
...
LL |     Gc::new(t);
   |     --------^- caused by trying to construct a `Gc<T>` here.
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values whose types implement `FinalizerSafe`.

error: The drop method for `Rc<u8>` cannot be safely finalized.
  --> $DIR/stdlib_errors.rs:34:13
   |
LL |     Gc::new(t);
   |     --------^-
   |     |       |
   |     |       this `Rc<u8>` is not safe to be run as a finalizer
   |     caused by trying to construct a `Gc<T>` here.

error: The drop method for `Rc<Rc<Rc<u8>>>` cannot be safely finalized.
  --> $DIR/stdlib_errors.rs:38:13
   |
LL |     Gc::new(u);
   |     --------^-
   |     |       |
   |     |       this `Rc<Rc<Rc<u8>>>` is not safe to be run as a finalizer
   |     caused by trying to construct a `Gc<U>` here.

error: aborting due to 4 previous errors

